# cspace3d

./: .gitignore  CMakeLists.txt  README.md
map/cfg/: AcrosstheCape.cfg  AcrosstheCape.sg  Aftershock.cfg  Archipelago.cfg  ArcticStation.cfg  Aurora.cfg  Aurora.sg  Backwoods.cfg  Backwoods.sg  BigGameHunters.cfg  BlackLotus.cfg  BlastFurnace.cfg  BrokenSteppes.cfg  Brushfire.cfg  Caldera.cfg  Caldera.sg  CatwalkAlley.cfg  CatwalkAlley.sg  Cauldron.cfg  Cauldron.sg  CrashSites.cfg  CrashSites.sg  CrescentMoon.cfg  CrescentMoon.sg  Crossroads.cfg  Desolation.cfg  EbonLakes.cfg  EbonLakes.sg  Elderlands.cfg  Elderlands.sg  Enigma.cfg  Enigma.sg  Entanglement.cfg  Entanglement.sg  Eruption.cfg  Eruption.sg  Expedition.cfg  FireWalker.cfg  FireWalker.sg  FloodedPlains.cfg  (+73 more)
map/hand_made_maps/: README.md  handmade.sg
matlab/: RvsT.m  cfg2bitMap.m  heatscatter.m  plot_expanded.m  sigmoid.m  templot.m  trans.m  visual.m
matlab/motion_primitive_gen/: unicycle.mprim  unicycle_3X.mprim
results/GameResult/: DijL.txt  DijS.txt  barL.txt  barS.txt  pabL.txt  pabS.txt  penL.txt  penS.txt  viResult.m
results/GameResult/rrtl/: log1.txt  log2.txt  log3.txt  log4.txt  log5.txt
results/GameResult/rrts/: log1.txt  log2.txt  (+3 more)
results/RvsT/: time_circle.txt  time_maze.txt  time_mesh.txt  time_spiral.txt  time_square.txt  time_triangle.txt  time_tube.txt
scripts/: info_extract.cpp  info_extract_rrt.cpp  time_extract.cpp  vis_penalty_L.sh  vis_penalty_S.sh  visualize.py
src/: dubins.cpp  environment_navxythetaC.cpp  xythetaARA.cpp
src/include/: dubins.h  environment_navxythetaC.h
